2007-08-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, multi line paste from context menu of text field should open multi line paste sheet.

2007-08-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, text value on dialogs should be stored as a single line string.

2007-08-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, windowShouldClose needs objc_method in RubyCocoa 0.11.1p1 for PPC.

2007-08-06  Satoshi Nakagawa <artension@gmail.com>

	Implementing AutoOpDialog.
	Changed password text field on the server dialog to NSSecureTextField.

2007-08-03  Satoshi Nakagawa <artension@gmail.com>

	Added file transfer notifications on Growl.
	Added sound events of file transfer.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to use Time.now.usec for gettimeofday.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added CTCP.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added commands performed on login.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added automatic rejoin on kicked.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added automatic rejoin to acquire op.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Added Growl notifications on logged in, disconnected, kicked, invited.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Changed the default action for Tab key to going to next channel.
	Changed to open new talk when sending a text message to unknown nick.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Implemented event sounds.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Added sound settings.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Added flood protection.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, kana characters in 0xd0-0xdf were ignored in receiving.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Changed spacing strategy of log view.

2007-07-30  Satoshi Nakagawa <artension@gmail.com>

	Added address detection.