@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{682, 64}, {923, 1107}}</string>
+	<string>{{684, 59}, {915, 1107}}</string>
 </dict>
 </plist>
